# klImageCore

./: .gitignore  README.md  _aperio_file_manager_8cpp.html  _aperio_file_manager_8cpp__incl.map  _aperio_file_manager_8cpp__incl.md5  _aperio_file_manager_8cpp_a1d8e09f702fda2b54f55aff75b31f2ac_icgraph.map  _aperio_file_manager_8cpp_a787acf614a4bbb2c6a4c2b83fb3491c1_icgraph.map  _aperio_file_manager_8cpp_a787acf614a4bbb2c6a4c2b83fb3491c1_icgraph.md5  _aperio_file_manager_8cpp_a8342414f4acf60e26efcf39f482d6558_icgraph.map  _aperio_file_manager_8cpp_ad01cf56d48bc76e2367a2c0e3d705097_icgraph.map  _aperio_file_manager_8cpp_affebe48975fb37e021ffc1c410389a30_icgraph.map  _aperio_file_manager_8h.html  _aperio_file_manager_8h__dep__incl.map  _aperio_file_manager_8h__dep__incl.md5  _aperio_file_manager_8h__incl.map  _aperio_file_manager_8h_a8342414f4acf60e26efcf39f482d6558_icgraph.map  _aperio_managed_reader_8cpp.html  _aperio_managed_reader_8cpp__incl.map  _aperio_managed_reader_8h.html  _aperio_managed_reader_8h__dep__incl.map  _aperio_managed_reader_8h__dep__incl.md5  _aperio_managed_reader_8h__incl.map  _assembly_info_8cpp.html  _interop_logger_8h.html  _interop_logger_8h__dep__incl.map  _interop_logger_8h__dep__incl.md5  _slide_macro_fns_8cpp.html  _slide_macro_fns_8cpp__incl.map  _slide_macro_fns_8cpp_a4c7127ec7ae8f017e02697664edd2158_cgraph.map  _slide_macro_fns_8cpp_a8d026506777c3b1c2bd653d9d414f1a5_cgraph.map  _slide_macro_fns_8cpp_aba3656e68929f43e85c09afed29342a8_cgraph.md5  _slide_macro_fns_8cpp_abe588742ace970942fb7e5ea0a7a1e1a_cgraph.map  _stdafx_8cpp.html  _stdafx_8cpp__incl.map  _stdafx_8cpp__incl.md5  _stdafx_8h.html  _stdafx_8h__dep__incl.map  _stdafx_8h__dep__incl.md5  annotated.html  class_aperio_file_manager.html  (+594 more)
CUDADelaunay/: Delaunay.vcxproj  Delaunay.vcxproj.filters  common.h  cudaBoundary.cu  cudaCCW.h  cudaConstraint.cu  cudaDecl.h  cudaFlipping.cu  cudaMain.cu  cudaMissing.cu  cudaReconstruction.cu  cudaShifting.cu  cudaVoronoi.cu  glut.h  gpudt.cpp  gpudt.h  kernelVoronoi.h  main.cpp  pba2DHost.cu  pba2DKernel.h  predicates.cpp  predicates.h  vertex.txt
ContrastNormalization/: files.txt  localBrightnessDiv.m  testLocalBrightDiv.asv  testLocalBrightDiv.m  upConv.mexw64
Documentation/: Doxyfile
Halftoning/: Colour.cpp  Colour.h  DM1.ppm  Image.cpp  Image.h  PointillismHalftoning.vcxproj  PointillismHalftoning.vcxproj.filters  bayer.cpp  dec.ppm  dec2.ppm  dither.cpp  dither.ppm  main.cpp  motif (2).ppm  output.ppm  (+3 more)
ipp-UIC.7.1.1.013/sources/advanced-usage/application/cpuinfo/: CMakeLists.txt
ipp-UIC.7.1.1.013/sources/advanced-usage/application/cpuinfo/include/: ippcpuinfo.h
ipp-UIC.7.1.1.013/sources/advanced-usage/application/cpuinfo/src/: cpuinfo_windows_ia32.asm  cpuinfo_windows_intel64.asm  ippgetcpuinfo.c  samplecpuinfo.c
ipp-UIC.7.1.1.013/sources/uic/application/picnic/: CMakeLists.txt
ipp-UIC.7.1.1.013/sources/uic/application/picnic/data/: haar.txt
ipp-UIC.7.1.1.013/sources/uic/application/picnic/include/: aboutdlg.h  colorlayoutfea.h  constants.h  detector.h  dicom.h  edgehistogramfea.h  facedetection.h  fileopendlg.h  filesavedlg.h  harmonization.h  imagefea.h  imagefeadb.h  imagewidget.h  inpainting.h  jpeg2k.h  jpegxr.h  mainwindow.h  optionsdialog.h  pixmap.h  precomp.h  raw.h  segmentation.h  sobel.h  timer.h
ipp-UIC.7.1.1.013/sources/uic/application/picnic/res/: fileopen.xpm  filesave.xpm  next.xpm  picnic.rc  prev.xpm
ipp-UIC.7.1.1.013/sources/uic/application/picnic/src/: aboutdlg.cpp  bmp.cpp  colorlayoutfea.cpp  detector.cpp  dicom.cpp  edgehistogramfea.cpp  facedetection.cpp  fileopendlg.cpp  filesavedlg.cpp  harmonization.cpp  imagefea.cpp  imagefeadb.cpp  imagewidget.cpp  inpainting.cpp  ippimage.cpp  jpeg.cpp  jpeg2k.cpp  jpegxr.cpp  main.cpp  mainwindow.cpp  optionsdialog.cpp  pixmap.cpp  png.cpp  raw.cpp  resources.qrc  segmentation.cpp  sobel.cpp  timer.cpp
(+3923 files in other folders)
